# hwostyle

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
docs/: conf.py  index.md
src/hwostyle/: __init__.py  colormaps.py  colors.py  core.py  palette.py  palettes.py
src/hwostyle/styles/: __init__.py  _shared.py  barbie.py  dark.py  light.py  paper.py
tests/: test_style.py
