[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hwostyle"
description = "Matplotlib style sheets and utilities for HWO direct imaging figures. Dual-mode dark (talks) and light (papers) themes with domain-specific colormaps."
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme', 'version']
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = ["matplotlib>=3.8", "cycler"]

[project.optional-dependencies]
dev = ["pre-commit"]
docs = [
    "sphinx",
    "myst-nb",
    "sphinx-book-theme",
    "sphinx-autoapi",
    "sphinx_autodoc_typehints",
    "ipython",
    "matplotlib",
]
test = ["nox", "pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/CoreySpohn/hwostyle"
Issues = "https://github.com/CoreySpohn/hwostyle/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hwostyle/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/hwostyle"]

[tool.hatch.build.targets.sdist]
exclude = ["/docs", "/tests", "/.github"]

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "UP", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"
